# rusted_data-store

./: .env  Cargo.toml  gen_mig.sh  mig_run.sh  print_schema.sh
migrations/2023-11-01-055403_create_articles/: up.sql
src/: connection.rs  main.rs  router.rs  schema.rs
src/handlers/: articles.rs  posts.rs
src/models/: articles.rs  posts.rs
src/repo/: articles.rs  mod.rs  posts.rs
