[package]
name = "myDataStoreApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.31", features=["serde"] }
diesel = {version="2.1.3", features=["r2d2", "postgres", "chrono"]}
dotenv = "0.15.0"
# env_logger = "0.10.0"
# log = "0.4.20"
rocket = "0.4.11"
# rocket_codegen = "0.4.11"
rocket_contrib = { version = "*", default-features = false, features = ["json"] }
serde = { version="1.0.190", features=["derive"] }
serde_derive = "1.0.190"
# serde_json = "1.0.107"
